[gd_scene load_steps=10 format=3 uid="uid://donft7if41o20"]

[ext_resource type="Script" path="res://entities/player/player.gd" id="1_b5e7e"]
[ext_resource type="Script" path="res://entities/player/player_camera.gd" id="2_klyoy"]
[ext_resource type="PackedScene" uid="uid://dfi2uwfuvbq6n" path="res://ui/gameplay_overlay/gameplay_overlay.tscn" id="3_vux7u"]
[ext_resource type="PackedScene" uid="uid://bgg8u3wx05wrs" path="res://ui/pause_menu/pause_menu.tscn" id="4_7mddg"]
[ext_resource type="PackedScene" uid="uid://ke4mita1jqdj" path="res://ui/game_over_menu/game_over_menu.tscn" id="5_yi636"]
[ext_resource type="PackedScene" uid="uid://chpqpru4at4pi" path="res://entities/player/footstep_generator.tscn" id="6_4kdcf"]
[ext_resource type="PackedScene" uid="uid://dq30r5u0h2sit" path="res://common/particles/snow/snow_particle_generator.tscn" id="7_61al1"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_u3xpg"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_njsfp"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[node name="Player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_b5e7e")
mouse_sensitivity = 0.5
movement_speed = 2.0

[node name="PlayerMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01065, 0)
mesh = SubResource("CapsuleMesh_u3xpg")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01065, 0)
shape = SubResource("ConvexPolygonShape3D_njsfp")

[node name="PlayerCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.46563, -0.487742)
current = true
script = ExtResource("2_klyoy")

[node name="GameplayOverlay" parent="." instance=ExtResource("3_vux7u")]

[node name="PauseMenu" parent="." instance=ExtResource("4_7mddg")]
visible = false

[node name="GameOverMenu" parent="." instance=ExtResource("5_yi636")]
visible = false

[node name="FootstepGenerator" parent="." instance=ExtResource("6_4kdcf")]
unique_name_in_owner = true

[node name="SnowParticleGenerator" parent="." instance=ExtResource("7_61al1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.62169, 0)
amount = 2000
